# url_shortener

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
api/: urls.py
config/: settings.py  urls.py
url_shortener/: models.py  serializers.py  urls.py  views.py
url_shortener/migrations/: 0001_initial.py  0002_alter_shrotenedurl_short_url.py
